--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     android:orientation="horizontal">
 
     <fragment
-        android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:layout_height="wrap_content"
         android:id="@+id/fragment"
-     />
+        android:name="com.example.admin.fragmentsdeldimoni.FragmentPrincipal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5" />
 
     <LinearLayout
         android:layout_width="0dp"
